# director-hub

./: .gitignore  .pre-commit-config.yaml  AI_EXTRACTION_ARCHITECTURE.md  AI_MASK_QUICKSTART.md  AI_MASK_WORKFLOW_GUIDE.md  AUDIT_INSTRUCTION_SHEET.md  CLAUDE.md  GIT_WORKFLOW.md  LIVE_TEST_MATRIX.md  LIVE_TEST_RESULTS_TEMPLATE.md  PROJECT_MEMORY.md  QA_RUNBOOK.md  README.md  SESSION_HISTORY.md  SETUP_BACKGROUND_REMOVAL_ONLY.txt  SETUP_FOR_ME.txt  app.js  index.html  pyproject.toml  screenshot.py  serve.py  starter-workflow-background-removal-only.json  starter-workflow-juggernaut-fantasy.json  starter-workflow-pixel-ui-background-removal.json  styles.css  test_advanced_settings.py  test_ai_refinement.py  test_debug_pipeline.py  test_download_result.py  test_e2e_dark_preset.py  test_e2e_light_preset.py  test_extraction.py  test_full_workflow.py  test_mask_apply.py  test_mask_canvas.py  test_mask_console.py  test_mask_debug.py  test_presets.py
.claude/: settings.json
api/: __init__.py  bridge.py  jobs.py  pool.py  router.py  utils.py
border_detect/: __init__.py  calibrate.py  ensemble.py  pipeline.py  preprocess.py
director_hub/: __init__.py
docs/: toolbelt-status.md
scripted/: README.md  remove_black_bg.py  run_batch_background_removal.bat  run_batch_background_removal.ps1  run_batch_background_removal_hard.bat  run_batch_background_removal_hard.ps1
tests/: conftest.py  launcher.py  production_loop.py  pytest.ini  quality_loop.py  test_anthropic_tool_loop.py  test_api.py  test_border_detect.py  test_chunk_generator.py  test_complexity.py  test_dark_presets.py  (+38 more)
(+128 files in other folders)
