[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "director_hub"
version = "0.1.0"
description = "Agentic AI brain for the Forever engine RPG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
anthropic = [
    "anthropic>=0.40",
]
chroma = [
    "chromadb>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["director_hub*"]
exclude = ["tests*", "_archive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
